@@ -25,7 +25,10 @@ my %WriteMakefileArgs = (
     "Types::Standard" => "0.040",
     "namespace::autoclean" => "0.28"
   },
-  "VERSION" => "0.19",
+  "TEST_REQUIRES" => {
+    "Test::Exception" => 0
+  },
+  "VERSION" => "0.20",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -38,6 +41,7 @@ my %FallbackPrereqs = (
   "JSON::MaybeXS" => "1.003009",
   "Mojolicious" => "4.66",
   "Moo" => "1.004002",
+  "Test::Exception" => 0,
   "Types::Standard" => "0.040",
   "namespace::autoclean" => "0.28"
 );
