@@ -7,6 +7,10 @@ requires "Types::Standard" => "0.040";
 requires "namespace::autoclean" => "0.28";
 requires "perl" => "5.014";
 
+on 'test' => sub {
+  requires "Test::Exception" => "0";
+};
+
 on 'configure' => sub {
   requires "ExtUtils::MakeMaker" => "0";
 };
