@@ -51,3 +51,6 @@ Types::Standard = 0.040
 JSON::MaybeXS = 1.003009
 HTTP::Tiny = 0.054
 namespace::autoclean = 0.28
+[Prereqs / TestPrereqs]
+-phase = test
+Test::Exception = 0
